--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^3.1.0",
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
+    "mongoose-type-email": "^1.1.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
