--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "date-fns": "^3.1.0",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "mongoose": "^8.0.3",
     "mongoose-type-email": "^1.1.2",
     "uuid": "^9.0.1"
